# pluggy

./: .pre-commit-config.yaml  setup.cfg
src/pluggy/: __init__.py  _result.py  _tracing.py  callers.py  hooks.py  manager.py
testing/: test_details.py  test_helpers.py  test_hookcaller.py  test_invocations.py  test_multicall.py  test_pluginmanager.py  test_tracer.py
